--- a/701-800.md
+++ b/701-800.md
@@ -68,3 +68,30 @@ for (int right = 0; right < nums.length; right++) {
 如果是`1`则往后走两个，否则走一个，看能走到的位置
 # 718. Maximum Length of Repeated Subarray
 连续的数组，所以`dp`要考虑从对角线转移过来，途中记录最大值
+# 719. Find K-th Smallest Pair Distance
+桶排序的思想，把所有的差值个数记录下来，找第`k`大的元素
+
+另外是二分的方法，排序后，查找有多少个小于`mid`
+``` java
+Arrays.sort(nums);
+    int n = nums.length-1;
+    int left = 0;
+    int right = nums[n]-nums[0];
+    while(left<right){
+        int start = 0;
+        int count = 0;
+        int mid = left+(right-left)/2;
+        for(int i = 0;i<=n;i++){
+            while(start<=n && nums[i]-nums[start]>mid) start+=1;
+            count+=i-start;
+        }
+        if(count<k){
+            left = mid+1;
+        }
+        else{
+            right = mid;
+        }
+    }
+    return left;
+}
+```
