--- a/701-800.md
+++ b/701-800.md
@@ -95,3 +95,86 @@ Arrays.sort(nums);
     return left;
 }
 ```
+# 720. Longest Word in Dictionary
+`set`记录满足条件的单词，每次能往里面放的时候便比较长度
+
+可以使用前缀树，再求最大的长度，遍历的时候每一步都要是`word`
+``` java
+class TrieNode {
+    TrieNode[] children = new TrieNode[26];
+    boolean isWord = false;
+    String str = "";
+}
+
+public void insert(String s) {
+    TrieNode cur = node;
+    for(int i = 0; i < s.length(); i++)
+    {
+        int pos = s.charAt(i) - 'a';
+        if(cur.children[pos] == null)
+            cur.children[pos] = new TrieNode();
+        cur = cur.children[pos];
+    }
+    cur.isWord = true;
+    cur.str = s;
+}
+
+public String longestWord(String[] words) {
+    for(String word: words)
+        insert(word);
+    dfs(node);
+    return res;
+}
+
+String res = "";
+public void dfs(TrieNode cur) {
+    if(cur.str.length() > res.length())
+        res = cur.str;
+        
+    for(int i = 0; i < 26; i++) 
+    {
+        if(cur.children[i] != null && cur.children[i].isWord)
+            dfs(cur.children[i]);
+    }
+}
+```
+# 721. Accounts Merge
+并查集，每个邮箱当成一个节点，并合并他们
+
+也可以构造一个`map`从`email`到编号的映射，遍历`account`过程中合并这些编号，再遍历`map`是否是一个编号里面的
+``` java
+Map<String, Integer> hashMap = new HashMap<>();
+for (int i = 0; i < len; i++) {
+    List<String> account = accounts.get(i);
+    int currentSize = account.size();
+    for (int j = 1; j < currentSize; j++) {
+        String email = account.get(j);
+        Integer personId = hashMap.get(email);
+        if (personId == null) {
+            hashMap.put(email, i);
+        } else {
+            unionFind.union(i, personId);
+        }
+    }
+}
+Map<Integer, List<String>> emailList = new HashMap<>(len);
+for (Map.Entry<String, Integer> entry : hashMap.entrySet()) {
+    String email = entry.getKey();
+    Integer personId = entry.getValue();
+    int rootPerson = unionFind.find(personId);
+    List<String> rootEmailList = emailList.get(rootPerson);
+    if (rootEmailList == null) {
+        List<String> temp = new ArrayList<>();
+        temp.add(email);
+        emailList.put(rootPerson, temp);
+    } else {
+        rootEmailList.add(email);
+    }
+}
+```
+# 722. Remove Comments
+逐行分析，根据不同的符号，判断是否需要添加
+
+另外可以把所有的当成串成一个带回车的字符串，`//`找后面的回车，`/*`找`*/`，最后根据换行形成答案
+# 724. Find Pivot Index
+记录总和和前缀和，可以求出当前是否满足条件
