--- a/701-800.md
+++ b/701-800.md
@@ -178,3 +178,9 @@ for (Map.Entry<String, Integer> entry : hashMap.entrySet()) {
 另外可以把所有的当成串成一个带回车的字符串，`//`找后面的回车，`/*`找`*/`，最后根据换行形成答案
 # 724. Find Pivot Index
 记录总和和前缀和，可以求出当前是否满足条件
+# 725. Split Linked List in Parts
+求出长度，计算每个数组的大小，拆分时将`prev`指向`null`
+# 726. Number of Atoms
+利用栈，遇到数字的时候结算，结算时分析栈顶是右括号还是字符串
+# 728. Self Dividing Numbers
+暴力计算每个值是否符合
