--- a/701-800.md
+++ b/701-800.md
@@ -184,3 +184,49 @@ for (Map.Entry<String, Integer> entry : hashMap.entrySet()) {
 利用栈，遇到数字的时候结算，结算时分析栈顶是右括号还是字符串
 # 728. Self Dividing Numbers
 暴力计算每个值是否符合
+# 729. My Calendar I
+`map[start]=end`，考虑前一个和后一个的位置
+
+数量级上可以直接暴力
+
+也可以按区间来构造类似`bst`的结构
+``` java
+class  Node{
+    int start;
+    int end;
+    Node left;
+    Node right;
+    public  Node(int s,int e){
+        start=s;
+        end=e;
+    }
+}
+Node root;
+    
+public boolean book(int start, int end) {
+    if(root==null){
+        root=new Node(start,end);
+        return true;
+    }
+    return book(root,start,end);
+}
+
+private boolean book(Node root, int start, int end) {
+    if(end<=root.start){
+        if(root.left==null){
+            root.left=new Node(start,end);
+            return true;
+        }
+        return book(root.left,start,end);
+    }
+    if(start>=root.end){
+        if ((root.right)==null){
+            root.right=new Node(start,end);
+            return true;
+        }else {
+            return book(root.right,start,end);
+        }
+    }
+    return false;
+}
+```
