--- a/701-800.md
+++ b/701-800.md
@@ -230,3 +230,5 @@ private boolean book(Node root, int start, int end) {
     return false;
 }
 ```
+# 730. Count Different Palindromic Subsequences
+`dp`，考虑首位字符相同或不相同的情况
