--- a/701-800.md
+++ b/701-800.md
@@ -232,3 +232,31 @@ private boolean book(Node root, int start, int end) {
 ```
 # 730. Count Different Palindromic Subsequences
 `dp`，考虑首位字符相同或不相同的情况
+# 731. My Calendar II
+暴力，若存在重合区间则保留区间
+
+可以记录进入和结束次数，按顺序遍历，当整个开始累计到`3`则返回错误
+``` java
+public boolean book(int start, int end) {
+    delta.put(start, delta.getOrDefault(start, 0) + 1);
+    delta.put(end, delta.getOrDefault(end, 0) - 1);
+    int active = 0;
+    for (int d: delta.values()) {
+        active += d;
+        if (active >= 3) {
+            delta.put(start, delta.get(start) - 1);
+            delta.put(end, delta.get(end) + 1);
+            if (delta.get(start) == 0)
+                delta.remove(start);
+            return false;
+        }
+    }
+    return true;
+}
+```
+# 732. My Calendar III
+类似[731](#731-my-calendar-ii)区间计数，遍历统计
+# 733. Flood Fill
+`bfs`，`dfs`都可以
+> 如果原始颜色与新颜色一样可以直接返回，不一样遍历，改变后即代表访问了，可以不记录`vis`
+
