--- a/701-800.md
+++ b/701-800.md
@@ -259,4 +259,9 @@ public boolean book(int start, int end) {
 # 733. Flood Fill
 `bfs`，`dfs`都可以
 > 如果原始颜色与新颜色一样可以直接返回，不一样遍历，改变后即代表访问了，可以不记录`vis`
-
+# 735. Asteroid Collision
+用栈模拟整个过程，遇到负数的时候考虑栈的变化
+# 736. Parse Lisp Expression
+递归，每次进入用新`map`处理作用域
+# 738. Monotone Increasing Digits
+从右向左扫描，若发现当前数字比其左边一位小，则把其左边一位数字减`1`，并将该位及其右边的所有位改成`9`
