--- a/701-800.md
+++ b/701-800.md
@@ -265,3 +265,20 @@ public boolean book(int start, int end) {
 递归，每次进入用新`map`处理作用域
 # 738. Monotone Increasing Digits
 从右向左扫描，若发现当前数字比其左边一位小，则把其左边一位数字减`1`，并将该位及其右边的所有位改成`9`
+# 739. Daily Temperatures
+单调栈，求右边第一个大于该元素的位置，栈中记录下标
+# 740. Delete and Earn
+`dp`，转换到`0-10000`上，跟[198](https://github.com/humwawe/leetcode/blob/master/101-200.md#198-house-robber)一样
+``` java
+dp[i] = Math.max(dp[i - 2] + dp[i] * i, dp[i - 1]);
+```
+# 741. Cherry Pickup
+贪心的算两次会出现错误，直接用两个人来行动，有`r1+c1=r2+c2`，因此需要三个变量，两人走的情况是
+1. 右 右
+2. 右 下
+3. 下 右
+4. 下 下
+
+注意到两人都不会走到另一人之前的位置，但可能走相同的位置
+
+
