--- a/701-800.md
+++ b/701-800.md
@@ -280,5 +280,9 @@ dp[i] = Math.max(dp[i - 2] + dp[i] * i, dp[i - 1]);
 4. 下 下
 
 注意到两人都不会走到另一人之前的位置，但可能走相同的位置
-
+# 743. Network Delay Time
+`dfs`，遍历到每个点可能的距离
+>图的最短路径问题，可以`bellman-ford`、`dijkstra`、`floyd`、`SPFA`等
+# 744. Find Smallest Letter Greater Than Target
+注意到有序了，找到第一个大于`target`的就可以返回，否则返回第一个。也可以二分
 
