--- a/701-800.md
+++ b/701-800.md
@@ -285,4 +285,6 @@ dp[i] = Math.max(dp[i - 2] + dp[i] * i, dp[i - 1]);
 >图的最短路径问题，可以`bellman-ford`、`dijkstra`、`floyd`、`SPFA`等
 # 744. Find Smallest Letter Greater Than Target
 注意到有序了，找到第一个大于`target`的就可以返回，否则返回第一个。也可以二分
-
+# 745. Prefix and Suffix Search
+把所有的可能都记录下来，只保留最大的位置
+>注意不能直接相加，中间需要加分隔符
