--- a/701-800.md
+++ b/701-800.md
@@ -288,3 +288,27 @@ dp[i] = Math.max(dp[i - 2] + dp[i] * i, dp[i - 1]);
 # 745. Prefix and Suffix Search
 把所有的可能都记录下来，只保留最大的位置
 >注意不能直接相加，中间需要加分隔符
+746. Min Cost Climbing Stairs
+`dp`
+``` java
+dp[i] = Math.min(dp[i - 1] + cost[i - 1], dp[i - 2] + cost[i - 2]);
+```
+# 747. Largest Number At Least Twice of Others
+找到最大元素，比较与每个元素的关系
+
+可以一次遍历，找出最大和第二大的元素，比较两者的关系即可
+``` java
+int max = 0, idx = 0, less = 1;
+for (int i = 0; i < nums.length; i++) {
+    if (nums[i] > max) {
+        less = max;
+        max = nums[i];
+        idx = i;
+    } else if (nums[i] > less) {
+        less = nums[i];
+    }
+}
+return max >= (less * 2) ? idx : -1;
+```
+# 748. Shortest Completing Word
+按长度排序后，比较每个单词是否满足，也可以不排序，遍历整个数组找满足的，同时更新长度
