--- a/701-800.md
+++ b/701-800.md
@@ -312,3 +312,7 @@ return max >= (less * 2) ? idx : -1;
 ```
 # 748. Shortest Completing Word
 按长度排序后，比较每个单词是否满足，也可以不排序，遍历整个数组找满足的，同时更新长度
+# 749. Contain Virus
+`dfs`遍历找每个区域最多向外的衍生面积，并记录墙的个数，找到最大面积的位置，并将该区域建墙，并对其他区域进行扩展，重复整个过程
+# 752. Open the Lock
+`bfs`
