--- a/701-800.md
+++ b/701-800.md
@@ -316,3 +316,65 @@ return max >= (less * 2) ? idx : -1;
 `dfs`遍历找每个区域最多向外的衍生面积，并记录墙的个数，找到最大面积的位置，并将该区域建墙，并对其他区域进行扩展，重复整个过程
 # 752. Open the Lock
 `bfs`
+# 753. Cracking the Safe
+可以看做是有限状态自动机的一笔画问题，每个位置尝试尝试所有点
+
+可以直接构造，每次从`k-1`开始放，看是否存在于`set`中
+``` java
+for (int i = 1; i < total; i++) {
+    String temString = sb.substring(sb.length() - n + 1);
+    for (int j = k - 1; j >= 0; j--) {
+        String tem = temString + j;
+        if (!set.contains(tem)) {
+            sb.append(j);
+            set.add(tem);
+            break;
+        }
+    }
+}
+```
+# 754. Reach a Number
+容易想到`target`的正负是无关紧要的，再考虑从`1`加到`n`的`sum`
+* 当`sum`刚好等于`target`，则直接返回`n`
+* 当`sum-target`的差值为偶数，则可以改变中间的一个值的符号，从加变为减会有两倍的变化，因此差值需要为偶数
+* 当`sum-target`的差值为奇数，此时考虑`n+1`的符号，当其为奇，则再走一步`n+1`可以使得`sum-target`为偶，当其为偶，则需要再往下一位`n+2`为奇
+# 756. Pyramid Transition Matrix
+注意`dfs`的写法
+> 需要用到位置的信息
+
+也可以在每一层生成所有的可能性后递归下去
+``` java
+private boolean dfs(String bottom) {
+    if(bottom.length() == 1) return true;
+    for(int i = 0; i < bottom.length()-1; ++i)
+        if(!map.containsKey(bottom.substring(i,i+2)))
+            return false;
+    List<String> candidates = new ArrayList<>();
+    generateUpper(bottom, candidates, new StringBuilder(), 0);
+    for(String upper : candidates)
+        if(dfs(upper))
+            return true;
+    return false;
+}
+
+private void generateUpper(String bottom, List<String> candidates, StringBuilder sb, int st) {
+    if(st == bottom.length()-1) {
+        candidates.add(sb.toString());
+        return;
+    }
+    for(Character c : map.get(bottom.substring(st, st+2))) {
+        sb.append(c);
+        generateUpper(bottom, candidates, sb, st+1);
+        sb.deleteCharAt(sb.length()-1);
+    }
+}
+```
+
+    
+    
+    
+    
+    
+    
+    
+    
