--- a/701-800.md
+++ b/701-800.md
@@ -369,12 +369,17 @@ private void generateUpper(String bottom, List<String> candidates, StringBuilder
     }
 }
 ```
+# 757. Set Intersection Size At Least Two
+贪心，先按右边排序，选的时候尽量选右边的两个点，根据两者的位置关系更新这个两个点即可
+# 761. Special Binary String
+每次提取连续的子串，排序后便是结果，而每一个子串去掉首位`1`和末尾`0`，又可以转换为一个相同的子问题
+# 762. Prime Number of Set Bits in Binary Representation
+遍历区间，数`1`的个数，根据数据范围给出质数所在的位置
 
-    
-    
-    
-    
-    
-    
-    
-    
+也可以按去`1`的思路来求`1`的个数
+``` java
+while(temp != 0){
+    n ++;
+    temp &= temp-1;
+}
+```
