--- a/701-800.md
+++ b/701-800.md
@@ -383,3 +383,57 @@ while(temp != 0){
     temp &= temp-1;
 }
 ```
+# 763. Partition Labels
+记录每个字母最右端点的位置，遍历区间中的元素最远位置是否已到达
+# 764. Largest Plus Sign
+把每一行，每一列记录在`set`中，每次拿出一个点的四个方向的最近位置
+
+考虑动态规划，四个方向进行`dp`
+``` java
+for (int r = 0; r < N; ++r) {
+    count = 0;
+    for (int c = 0; c < N; ++c) {
+        count = set.contains(r*N + c) ? 0 : count + 1;
+        dp[r][c] = count;
+    }
+    count = 0;
+    for (int c = N-1; c >= 0; --c) {
+        count = set.contains(r*N + c) ? 0 : count + 1;
+        dp[r][c] = Math.min(dp[r][c], count);
+    }
+}
+
+for (int c = 0; c < N; ++c) {
+    count = 0;
+    for (int r = 0; r < N; ++r) {
+        count = set.contains(r*N + c) ? 0 : count + 1;
+        dp[r][c] = Math.min(dp[r][c], count);
+    }
+    count = 0;
+    for (int r = N-1; r >= 0; --r) {
+        count = set.contains(r*N + c) ? 0 : count + 1;
+        dp[r][c] = Math.min(dp[r][c], count);
+        ans = Math.max(ans, dp[r][c]);
+    }
+}
+```
+# 765. Couples Holding Hands
+记录每个数字的下标，模拟交换过程
+> 求`pair`可以直接取异或`1`
+
+考虑并查集，求出存在几个联通图，在每个连通图中需要`k-1`次交换，其实就是总对数减去联通个数
+``` java
+for (int i = 0; i < n; i += 2) {
+    p[i + 1] = i;
+    p[i] = i;   
+}
+
+for (int i = 0; i < n; i += 2) {
+    p[find(row[i + 1])] = find(row[i]);  
+}
+
+int res = n / 2;
+for (int i = 0; i <= n; i ++) {
+    if (p[i] == i) res --;
+}
+```
