--- a/701-800.md
+++ b/701-800.md
@@ -437,3 +437,27 @@ for (int i = 0; i <= n; i ++) {
     if (p[i] == i) res --;
 }
 ```
+# 766. Toeplitz Matrix
+按对角线遍历
+
+考虑对角线的关系，即对角线的元素`i-j`是相同的
+``` java
+Map<Integer, Integer> map = new HashMap();
+for (int r = 0; r < matrix.length; ++r) {
+    for (int c = 0; c < matrix[0].length; ++c) {
+        if (!map.containsKey(r-c))
+            map.put(r-c, matrix[r][c]);
+        else if (map.get(r-c) != matrix[r][c])
+            return False;
+    }
+}
+return True;
+```
+考虑遍历，检查与左上的关系即可
+``` java
+for (int r = 0; r < matrix.length; ++r)
+    for (int c = 0; c < matrix[0].length; ++c)
+        if (r > 0 && c > 0 && matrix[r-1][c-1] != matrix[r][c])
+            return false;
+return true;
+```
