--- a/701-800.md
+++ b/701-800.md
@@ -461,3 +461,46 @@ for (int r = 0; r < matrix.length; ++r)
             return false;
 return true;
 ```
+# 767. Reorganize String
+将最长的长度作为标准，将剩下的元素排开，分段，将每段第一个元素取出来组成结果
+
+可以用堆，每次分别取出前两大的两个元素拼接
+# 768. Max Chunks To Make Sorted II
+跟[763](#763-partition-labels)思路差不多，记录排序后的元素应该到达的位置
+> 由于可以重复，因此要记录之前的元素出现了多少次
+
+可以比较前缀和大小是否一致
+``` java
+long sum1 = 0, sum2 = 0;
+for(int i = 0; i < arr.length; i++){
+    sum1 += arr[i];
+    sum2 += temp[i];
+    if(sum1 == sum2) num++;
+}
+```
+可以记录每个前缀最大值，然后反向遍历
+> 当前最大值比后面块的最小值要小
+``` java
+for(int i = 1; i < arr.length; i ++) {
+    maxArr[i] = Math.max(maxArr[i - 1], arr[i]);
+}
+int res = 1;
+int min = Integer.MAX_VALUE;
+for(int i = arr.length - 2; i >= 0; i --) {
+    min = Math.min(min, arr[i + 1]);
+    if(maxArr[i] <= min)     res ++;
+}
+```
+单调栈
+``` java
+for(int num:arr){
+    if(!stack.isEmpty() && stack.peek()>num){
+        int pop = stack.pop();
+        while(!stack.isEmpty() && stack.peek()>num) stack.pop();
+        stack.push(pop);
+    }else{
+        stack.push(num);
+    }
+}
+return stack.size();
+```
