--- a/701-800.md
+++ b/701-800.md
@@ -504,3 +504,15 @@ for(int num:arr){
 }
 return stack.size();
 ```
+# 769. Max Chunks To Make Sorted
+记录当前元素最远的位置，当`i`可以到达此位置则`+1`
+# 770. Basic Calculator IV
+计算器表达式带变量求值，比较繁杂
+# 771. Jewels and Stones
+用`set`存`j`的值，遍历看是否包含`s`中的元素
+# 773. Sliding Puzzle
+`bfs`搜索，将`board`转换为`string`求解
+# 775. Global and Local Inversions
+局部的属于全局，考虑超过`2`的距离下是否有满足的，只需考虑前缀（超过`2`）的最大值，当有某个位置小于最大值即可返回`false`
+
+另外由于只是连续的`n`个数，所以如果某个值提前了自己本来的位置`2`个以上，则`false`
