--- a/701-800.md
+++ b/701-800.md
@@ -516,3 +516,8 @@ return stack.size();
 局部的属于全局，考虑超过`2`的距离下是否有满足的，只需考虑前缀（超过`2`）的最大值，当有某个位置小于最大值即可返回`false`
 
 另外由于只是连续的`n`个数，所以如果某个值提前了自己本来的位置`2`个以上，则`false`
+``` java
+for(int i=0;i<a.length;i++){
+    if(Math.abs(a[i]-i)>1) return false;
+}
+```
