--- a/701-800.md
+++ b/701-800.md
@@ -521,3 +521,5 @@ for(int i=0;i<a.length;i++){
     if(Math.abs(a[i]-i)>1) return false;
 }
 ```
+# 777. Swap Adjacent in LR String
+`L`只能向左移动，`R`只能向右移动，因此`start`中的`L`要大于`end`，`R`要小于`end`，同时`L`和`R`不能穿过，所以相对位置要一样
