--- a/701-800.md
+++ b/701-800.md
@@ -523,3 +523,8 @@ for(int i=0;i<a.length;i++){
 ```
 # 777. Swap Adjacent in LR String
 `L`只能向左移动，`R`只能向右移动，因此`start`中的`L`要大于`end`，`R`要小于`end`，同时`L`和`R`不能穿过，所以相对位置要一样
+# 778. Swim in Rising Water
+优先队列的`bfs`，从队列中取当前最小的
+> 把两个点看成图的权值，也可以转化为`dijkstra`算法
+
+可以使用二分的`bfs`，对答案二分，考虑是否满足
