--- a/701-800.md
+++ b/701-800.md
@@ -528,3 +528,5 @@ for(int i=0;i<a.length;i++){
 > 把两个点看成图的权值，也可以转化为`dijkstra`算法
 
 可以使用二分的`bfs`，对答案二分，考虑是否满足
+# 779. K-th Symbol in Grammar
+找规律，递归考虑上一行的数是什么
