--- a/701-800.md
+++ b/701-800.md
@@ -530,3 +530,5 @@ for(int i=0;i<a.length;i++){
 可以使用二分的`bfs`，对答案二分，考虑是否满足
 # 779. K-th Symbol in Grammar
 找规律，递归考虑上一行的数是什么
+# 780. Reaching Points
+反向推导，考虑上一个状态，因为`(a-b,b)`，`(a,b-a)`，因为都是正数，所以一定是大的减去小的
