--- a/701-800.md
+++ b/701-800.md
@@ -532,3 +532,15 @@ for(int i=0;i<a.length;i++){
 找规律，递归考虑上一行的数是什么
 # 780. Reaching Points
 反向推导，考虑上一个状态，因为`(a-b,b)`，`(a,b-a)`，因为都是正数，所以一定是大的减去小的
+# 781. Rabbits in Forest
+看某个数字出现了多少次，比如`5`出现了`8`次，则前`6`个一组抵消，后面`2`个`5`又需要`6`个
+``` java
+for (int ans : answers) {
+    if (record[ans]==0 || ans == 0) {
+        res += ans + 1;
+        record[ans]=ans;
+    }else {
+        record[ans]--;
+    }
+}
+```
