--- a/701-800.md
+++ b/701-800.md
@@ -546,3 +546,56 @@ for (int ans : answers) {
 ```
 # 782. Transform to Chessboard
 行和列只有两种情况且个数上平均，再考虑移动行和列，分部是以`0`开头和`1`开头的情况
+# 783. Minimum Distance Between BST Nodes
+将所有元素放到列表中
+
+考虑中序遍历的时候直接更新
+``` java
+public void inorder(TreeNode node) {
+    if (node == null)
+        return;
+    inorder(node.left);
+    if (pre != null) {
+        min = Math.min(min, node.val - pre.val);
+    }
+    pre = node;
+    inorder(node.right);
+}
+```
+# 784. Letter Case Permutation
+递归，分别考虑单词选大写和小写的情况
+
+考虑直接构造，碰到字母，复制之前的为两份
+``` java
+for (char c: s.toCharArray()) {
+    int n = ans.size();
+    if (Character.isLetter(c)) {
+        for (int i = 0; i < n; ++i) {
+            ans.add(new StringBuilder(ans.get(i)));
+            ans.get(i).append(Character.toLowerCase(c));
+            ans.get(n+i).append(Character.toUpperCase(c));
+        }
+    } else {
+        for (int i = 0; i < n; ++i)
+            ans.get(i).append(c);
+    }
+}
+```
+用二进制掩码从`00000`到`11111`
+``` java
+for (int bits = 0; bits < 1<<len; bits++) {
+    int count = 0;
+    StringBuilder word = new StringBuilder();
+    for (char letter: s.toCharArray()) {
+        if (Character.isLetter(letter)) {
+            if (((bits >> count++) & 1) == 1)
+                word.append(Character.toLowerCase(letter));
+            else
+                word.append(Character.toUpperCase(letter));
+        } else {
+            word.append(letter);
+        }
+    }
+    ans.add(word.toString());
+}
+```
