--- a/701-800.md
+++ b/701-800.md
@@ -599,3 +599,52 @@ for (int bits = 0; bits < 1<<len; bits++) {
     ans.add(word.toString());
 }
 ```
+# 785. Is Graph Bipartite
+`bfs`依次染色，`dfs`也可以
+# 786. K-th Smallest Prime Fraction
+对分数值二分，考虑小于`mid`的有多少个，同时记录刚好小于`mid`的那个数
+# 787. Cheapest Flights Within K Stops
+`dfs`，遍历所有的可能路径，注意剪枝
+
+考虑`k`轮`Bellman-Ford`算法，`dp`
+``` java
+dp[k][v] = Math.min(dp[k-1][v], dp[k-1][u] + cost[u][v])
+```
+``` java
+int[][] dp = new int[K + 2][n];
+int INF = Integer.MAX_VALUE / 2;
+for(int i = 0; i < k + 2; i++) {
+    for(int j = 0; j < n; j++) {
+        if(j != src){
+            dp[i][j] = INF;
+        }
+    }
+}
+for(int i = 1; i < k+2; i++) {
+    for(int[] edge: flights) {
+        dp[i][edge[1]] = Math.min(dp[i][edge[1]], dp[i - 1][edge[0]] + edge[2]);
+    }
+}
+return dp[k+1][dst] == INF?-1:dp[k+1][dst];
+```
+`Dijkstra`也可以，在遍历过程加入`k`的限制，能取到`dst`的时候，即是最小值
+``` java
+PriorityQueue<int[]> queue = new PriorityQueue<>(Comparator.comparingInt(a -> a[0]));
+queue.offer(new int[]{0, src, k + 1});
+while (!queue.isEmpty()) {
+    int[] cur = queue.poll();
+    int price = cur[0];
+    int place = cur[1];
+    int remainStops = cur[2];
+    if (place == dst) {
+        return price;
+    }
+    if (remainStops > 0) {
+        for (int i = 0; i < n; i++) {
+            if (graph[place][i] > 0) {
+                queue.offer(new int[]{price + graph[place][i], i, remainStops - 1});
+            }
+        }
+    }
+}
+```
