--- a/701-800.md
+++ b/701-800.md
@@ -648,3 +648,10 @@ while (!queue.isEmpty()) {
     }
 }
 ```
+# 788. Rotated Digits
+暴力检查每一个数字
+# 789. Escape The Ghosts
+看谁能先到`target`即可，计算曼哈顿距离
+# 790. Domino and Tromino Tiling
+考虑当前列没有，上面有一个，下面有一个，都有的转移过程
+>注意初始化的边界条件
