--- a/701-800.md
+++ b/701-800.md
@@ -655,3 +655,10 @@ while (!queue.isEmpty()) {
 # 790. Domino and Tromino Tiling
 考虑当前列没有，上面有一个，下面有一个，都有的转移过程
 >注意初始化的边界条件
+# 791. Custom Sort String
+统计字符串出现的个数，然后构造
+# 792. Number of Matching Subsequences
+用`treeset`存每个坐标，对当前字符判断从之前字符的最小位置开始是否能满足
+# 793. Preimage Size of Factorial Zeroes Function
+末尾的`0`是由`5`得来的，每`5`个数字会产生一个或多个`0`，因此答案要么是`5`要么是`0`，0是因为如`25`包含`2`个`5`，会多一个`0`
+> 数字越大，`0`越多，所以可以二分，另外注意边界`5*(k+1)`一定包含了`k`个`0`
