--- a/701-800.md
+++ b/701-800.md
@@ -662,3 +662,29 @@ while (!queue.isEmpty()) {
 # 793. Preimage Size of Factorial Zeroes Function
 末尾的`0`是由`5`得来的，每`5`个数字会产生一个或多个`0`，因此答案要么是`5`要么是`0`，0是因为如`25`包含`2`个`5`，会多一个`0`
 > 数字越大，`0`越多，所以可以二分，另外注意边界`5*(k+1)`一定包含了`k`个`0`
+# 794. Valid Tic-Tac-Toe State
+* 如果没人获胜，`X`的跟`O`一样或者`X`多一个
+* 如果`X`获胜，那么`X`比`O`多一个
+* 如果`O`获胜，那么`X`跟`O`一样多
+# 795. Number of Subarrays with Bounded Maximum
+区间最大值在`[l,r]`间，转为为最大值小于`r`的减去最大值小于`l-1`的
+
+另外`dp`的思路
+* arr[i] > r, dp[i] = 0
+* arr[i] < l, dp[i] = dp[i-1] 
+* arr[i] >= l && arr[i] <= r, dp[i] = i-k，`k`是从`i`往前第一个比`r`大的位置，可以先求出来
+ 
+双指针的思路
+``` java
+for (int i = 0; i < arr.length; ++i) {
+    if (arr[i] > r) left = i;
+    if (arr[i] >= l) right = i;
+    res += right - left;
+}
+```
+# 796. Rotate String
+接一个`a`在`a`后面，看是否包含`b`
+
+另外可以考虑`Rabin-Karp`字符串哈希算法思想
+# 797. All Paths From Source to Target
+`dfs`遍历即可
