--- a/701-800.md
+++ b/701-800.md
@@ -688,3 +688,8 @@ for (int i = 0; i < arr.length; ++i) {
 另外可以考虑`Rabin-Karp`字符串哈希算法思想
 # 797. All Paths From Source to Target
 `dfs`遍历即可
+# 798. Smallest Rotation with Highest Score
+对每个数求出哪些`k`可以使其增加，`[)`区间增加`1`和减少`1`
+# 799. Champagne Tower
+从头开始模拟即可，超过`1`的话就对下贡献减去`1`的一半
+> 一个状态推多个状态
