--- a/801-900.md
+++ b/801-900.md
@@ -35,3 +35,14 @@ public boolean helper(int[] A, int begin, int len, int target){
     return false;
 }
 ````
+# 806. Number of Lines To Write String
+累加，加到`100`换行
+# 807. Max Increase to Keep City Skyline
+求出两个方向的天际线，遍历找不超过边际线的值
+# 808. Soup Servings
+考虑从四个选取中转换过来，另外注意到当`n`大于某个数，`a`先倒完的概率已经很大了，可以直接返回
+> 概率题可以考虑递归
+# 809. Expressive Words
+将单词分段，在比较每个`word`是否满足
+# 810. Chalkboard XOR Game
+注意到异或为`0`则直接获胜，当异或不为`0`的时候且个数为偶数的时候，肯定能拿出一个使得其他的数异或不为`0`
