--- a/801-900.md
+++ b/801-900.md
@@ -46,3 +46,29 @@ public boolean helper(int[] A, int begin, int len, int target){
 将单词分段，在比较每个`word`是否满足
 # 810. Chalkboard XOR Game
 注意到异或为`0`则直接获胜，当异或不为`0`的时候且个数为偶数的时候，肯定能拿出一个使得其他的数异或不为`0`
+# 811. Subdomain Visit Count
+遍历拆分即可
+# 812. Largest Triangle Area
+遍历三个点求最大面积
+> `S=|ad＋be＋cf－af－bc－de| * 0.5`
+# 813. Largest Sum of Averages
+`dp`，`dp[i][k]`表示前`i`个分成`k`份时的最大值，预处理前缀和可以常数时间得到平均值
+> `dp[i][k] = max(dp[i][k], dp[j][k - 1] + 1.0 * (sum[i] - sum[j]) / (i - j))`
+# 814. Binary Tree Pruning
+后续遍历，如果当前元素为`0`且左右子树为`null`，则删除节点
+
+考虑子树是否包含`1`
+``` java
+return containsOne(root) ? root : null;
+
+private boolean containsOne(TreeNode node) {
+    if (node == null) return false;
+    boolean a1 = containsOne(node.left);
+    boolean a2 = containsOne(node.right);
+    if (!a1) node.left = null;
+    if (!a2) node.right = null;
+    return node.val == 1 || a1 || a2;
+}
+```
+# 815. Bus Routes
+构建点到`bus`的图后`bfs`，如果构建点与点的关系会超时
