--- a/801-900.md
+++ b/801-900.md
@@ -74,3 +74,32 @@ private boolean containsOne(TreeNode node) {
 构建点到`bus`的图后`bfs`，如果构建点与点的关系会超时
 # 816. Ambiguous Coordinates
 相当于三重循环，先分逗号，再分点
+# 817. Linked List Components
+遍历链表看有多少个连续段在`set`中
+# 818. Race Car
+`bfs`容易超时，注意剪枝，位置和速度都要小于`2*target`
+
+记忆化递归，如果在`2`的`n`次方减`1`则直接返回`n`，另外两种策略
+1. 刚好大于`target`时返回
+2. 刚好小于`target`时返回`i`步数，再往前
+# 819. Most Common Word
+对单词预处理然后统计个数
+
+可以依次遍历，构造`word`
+``` java
+for (char c: paragraph.toCharArray()) {
+    if (Character.isLetter(c)) {
+        word.append(Character.toLowerCase(c));
+    } else if (word.length() > 0) {
+        String finalword = word.toString();
+        if (!banset.contains(finalword)) {
+            count.put(finalword, count.getOrDefault(finalword, 0) + 1);
+            if (count.get(finalword) > ansfreq) {
+                ans = finalword;
+                ansfreq = count.get(finalword);
+            }
+        }
+        word = new StringBuilder();
+    }
+}
+```
