--- a/801-900.md
+++ b/801-900.md
@@ -103,3 +103,13 @@ for (char c: paragraph.toCharArray()) {
     }
 }
 ```
+# 820. Short Encoding of Words
+按长度排序，将遇到的每个后缀放入`set`中，遍历看当前词是否是存在于`set`
+
+另外可以倒序构建字典树，叶子节点即是需要计算的节点
+# 821. Shortest Distance to a Character
+将所有出现的位置放到队列中进行`bfs`
+
+考虑两次遍历，记录上一次出现`c`的`prev`，`i-prev`即是可能的一个解，左右两次遍历找最小值
+# 822. Card Flipping Game
+正反面想等，则肯定不在里面，再分别遍历正反面
