--- a/801-900.md
+++ b/801-900.md
@@ -113,3 +113,5 @@ for (char c: paragraph.toCharArray()) {
 考虑两次遍历，记录上一次出现`c`的`prev`，`i-prev`即是可能的一个解，左右两次遍历找最小值
 # 822. Card Flipping Game
 正反面想等，则肯定不在里面，再分别遍历正反面
+# 823. Binary Trees With Factors
+记忆化递归
