--- a/801-900.md
+++ b/801-900.md
@@ -115,3 +115,23 @@ for (char c: paragraph.toCharArray()) {
 正反面想等，则肯定不在里面，再分别遍历正反面
 # 823. Binary Trees With Factors
 记忆化递归
+# 824. Goat Latin
+直接构造
+# 825. Friends Of Appropriate Ages
+利用桶的思想存每个年龄的个数，根据年龄判断满足题意的有多少个
+# 826. Most Profit Assigning Work
+找小于某个劳动力的最大收获，记录某个劳动力最大的收获，复杂度跟`difficulty`的值有关系，太大容易超
+
+考虑将复杂度降为长度，则双指针暴力
+>关键`worker`也要排序，计算第一个`worker`后，第二个肯定是大于等于第一个，所以可以在第一个的基础上计算
+``` java
+Arrays.sort(jobs, (a, b) -> a.x - b.x);
+Arrays.sort(worker);
+
+int ans = 0, i = 0, best = 0;
+for (int skill: worker) {
+    while (i < len && skill >= jobs[i].x)
+        best = Math.max(best, jobs[i++].y);
+    ans += best;
+}
+```
