--- a/801-900.md
+++ b/801-900.md
@@ -137,3 +137,25 @@ for (int skill: worker) {
 ```
 # 827. Making A Large Island
 对每个联通块进行染色，然后遍历，找到`0`看四个方向不同颜色联通块的个数
+# 828. Unique Letter String
+考虑字符串中的每一个字符，以他的前一个和后一个，他对结果的贡献即是`(i-prev)*(last-i)`
+# 829. Consecutive Numbers Sum
+数学计算，分成多少某些份是否合适，提前退出
+
+另外可以依次推
+* `1`个数时，可构成`n`
+* `2`个数若要构成`n`，第`2`个数与第`1`个数差为`1`，`n`减`1`能整除`2`则可以
+* `3`个数若要构成`n`，`n`减`1`再减`2`能整除`3`则能由可以
+* 依次递推，当商即第`1`个数小于等于`0`时结束
+``` java
+int i = 1;
+while (n > 0) {
+    if (n % i == 0) {
+        res++;
+    }
+    n -= i;
+    i += 1;
+}
+```
+# 830. Positions of Large Groups
+记录上一个位置，比较出现次数
