--- a/801-900.md
+++ b/801-900.md
@@ -159,3 +159,25 @@ while (n > 0) {
 ```
 # 830. Positions of Large Groups
 记录上一个位置，比较出现次数
+# 831. Masking Personal Information
+根据要求过滤
+# 832. Flipping an Image
+翻转的时候进行修改，可以用异或
+``` java
+for (int j = 0; j < (len + 1) / 2; j++) {
+    int temp = a[i][j] ^ 1;
+    a[i][j] = a[i][len - j - 1] ^ 1;
+    a[i][len - j - 1] = temp;
+}
+```
+# 833. Find And Replace in String
+存入结构体中，排序后依次替换
+# 834. Sum of Distances in Tree
+当一个点求出来后，其他的点可以通过这个点求出来
+
+具体将这两个点中间的点分开，求点`B`的距离和时，点`A`所有的向点`B`方向的路径都损失了距离`1`，其他方向都增加了距离`1`
+> 点`B`的距离和 = 点`A`的距离和 - 点`B`的子节点数(包括自身) + 其他节点数
+
+所以先用后序遍历求出`A`点的距离，同时计算节点数，再通过`A`点求得其他的点的距离
+* 先后序是有所有点贡献给`A`点的意思
+* 再前序是`A`点回馈求其他点
