--- a/801-900.md
+++ b/801-900.md
@@ -181,3 +181,15 @@ for (int j = 0; j < (len + 1) / 2; j++) {
 所以先用后序遍历求出`A`点的距离，同时计算节点数，再通过`A`点求得其他的点的距离
 * 先后序是有所有点贡献给`A`点的意思
 * 再前序是`A`点回馈求其他点
+# 835. Image Overlap
+计算每个`1`偏移次数，返回最大的
+# 836. Rectangle Overlap
+考虑不重叠的情况
+# 837. New 21 Game
+状态转移比较好想，`dp[i]`就是前`w`个数以等概率转移过来，但每次重复求前w个数的和会变成`O(n^2)`，所以引入滑动窗口
+# 838. Push Dominoes
+首位添加一个L和R，根据前一个字符推导
+
+考虑多源的`bfs`
+# 839. Similar String Groups
+并查集，相似就连接
