--- a/801-900.md
+++ b/801-900.md
@@ -193,3 +193,12 @@ for (int j = 0; j < (len + 1) / 2; j++) {
 考虑多源的`bfs`
 # 839. Similar String Groups
 并查集，相似就连接
+# 840. Magic Squares In Grid
+暴力比较
+>中间数字是`5`
+# 841. Keys and Rooms
+从`0`开始`bfs`
+# 842. Split Array into Fibonacci Sequence
+循环前两个数`check`是否能构成即可
+# 843. Guess the Word
+随便猜一个，然后跟此单词一样`match`的作为候选者继续猜
