--- a/801-900.md
+++ b/801-900.md
@@ -202,3 +202,29 @@ for (int j = 0; j < (len + 1) / 2; j++) {
 循环前两个数`check`是否能构成即可
 # 843. Guess the Word
 随便猜一个，然后跟此单词一样`match`的作为候选者继续猜
+# 844. Backspace String Compare
+从后往前，构造字符串
+# 845. Longest Mountain in Array
+找各个起始增长的位置，注意因为有想等所以状态需要特殊判断
+
+考虑找每个满足的山峰段
+``` java
+int ans = 0, base = 0;
+ while (base < len) {
+     int end = base;
+     if (end + 1 < len && a[end] < a[end + 1]) {
+         while (end + 1 < len && a[end] < a[end + 1]) end++;
+ 
+         if (end + 1 < len && a[end] > a[end + 1]) {
+             while (end + 1 < len && a[end] > a[end + 1]) end++;
+             ans = Math.max(ans, end - base + 1);
+         }
+     }
+     base = Math.max(end, base + 1);
+ }
+```
+# 846. Hand of Straights
+存入`treemap`中，再模拟抽取一遍
+# 847. Shortest Path Visiting All Nodes
+从所有节点开始`bfs`，记录通过每个节点时候的状态，如果重复则不再计算
+> 数据量`12`个点，可以对状态进行压缩
