--- a/801-900.md
+++ b/801-900.md
@@ -228,3 +228,7 @@ int ans = 0, base = 0;
 # 847. Shortest Path Visiting All Nodes
 从所有节点开始`bfs`，记录通过每个节点时候的状态，如果重复则不再计算
 > 数据量`12`个点，可以对状态进行压缩
+# 848. Shifting Letters
+前缀和取余
+# 849. Maximize Distance to Closest Person
+统计间隔的`0`有多少个
