--- a/801-900.md
+++ b/801-900.md
@@ -232,3 +232,7 @@ int ans = 0, base = 0;
 前缀和取余
 # 849. Maximize Distance to Closest Person
 统计间隔的`0`有多少个
+# 850. Rectangle Area II
+扫描线的感觉，借鉴天际线，对每个间隔的`x`求`y`区间
+# 851. Loud and Rich
+构建有向图，记忆化`dfs`在图里找最小的点
