--- a/801-900.md
+++ b/801-900.md
@@ -236,3 +236,13 @@ int ans = 0, base = 0;
 扫描线的感觉，借鉴天际线，对每个间隔的`x`求`y`区间
 # 851. Loud and Rich
 构建有向图，记忆化`dfs`在图里找最小的点
+# 852. Peak Index in a Mountain Array
+判断最高点即可，可以用二分
+# 853. Car Fleet
+按位置排序，看后面的是否能追上前面的
+
+考虑桶的思想可以优化到`O(target)`
+# 854. K-Similar Strings
+`bfs`，考虑当前状态，某个不相等的位置与后面每个位置进行交换的情况
+# 855. Exam Room
+用`treeset`存每个位置，遍历找满足的位置
