--- a/801-900.md
+++ b/801-900.md
@@ -246,3 +246,23 @@ int ans = 0, base = 0;
 `bfs`，考虑当前状态，某个不相等的位置与后面每个位置进行交换的情况
 # 855. Exam Room
 用`treeset`存每个位置，遍历找满足的位置
+# 856. Score of Parentheses
+对一个为左右括号满足的进行分割，再递归计算
+# 857. Minimum Cost to Hire K Workers
+`k`个工人至少要满足`radio`最大的那个，其他人的工资即为`quality*radio`，因此对不同的`radio`，去掉最大的`quality`
+
+比较暴力的思路，是考虑每个基准`work`，看是否有`k`个人满足，再重这些人中选`k`个最小的，可能超时
+# 858. Mirror Reflection
+模拟，考虑`Y`超出后应该对应的位置，每次改变`X`的方向
+
+考虑采用最大公约数的思路，把这个房间展开后计算
+``` java
+int g = gcd(p, q);
+p /= g; p %= 2;
+q /= g; q %= 2;
+
+if (p == 1 && q == 1) return 1;
+return p == 1 ? 0 : 2;
+```
+# 859. Buddy Strings
+如果两个字符串不相等，则只有两个位置不相等，且这两个位置互为相等，若相等，则看是否存在至少两个一样的字母
