--- a/801-900.md
+++ b/801-900.md
@@ -266,3 +266,21 @@ return p == 1 ? 0 : 2;
 ```
 # 859. Buddy Strings
 如果两个字符串不相等，则只有两个位置不相等，且这两个位置互为相等，若相等，则看是否存在至少两个一样的字母
+# 860. Lemonade Change
+模拟找钱过程，碰到`20`优先用`10`和`5`去凑
+# 861. Score After Flipping Matrix
+贪心的思路，先保证第一列全为`1`，再考虑后面的列，保留较多的`1`
+# 862. Shortest Subarray with Sum at Least K
+首先处理成前缀和，对某个位置`j`，考虑哪个位置`i`可以满足，前`i-1`个用某种结构存储，跟`two sum`类似
+
+有两个可以贪心的位置，将前面的用双端队列存储
+* 在求得某个位置`i`后，前`i`个可以去掉
+>对于`j`之后的数，如果`i`到`j`满足，`j+1`之后取到`i`之前的没有意义（长度非最小）
+* 在进入队列时，如果比队尾还小，则队尾可以弹出
+> `j`位置更小，更能满足之后的元素，同时它的下标更大
+# 863. All Nodes Distance K in Binary Tree
+递归一个`root`到`target`的距离，并根据正负判断左右子树方向，根据距离和方向考虑收集另一方向上`k-l-2`的节点
+
+另外比较好想的思路是把树转换为无向图后`bfs`
+
+也可以再建立一个反向的指向父节点指针后`bfs`
