--- a/801-900.md
+++ b/801-900.md
@@ -284,3 +284,5 @@ return p == 1 ? 0 : 2;
 另外比较好想的思路是把树转换为无向图后`bfs`
 
 也可以再建立一个反向的指向父节点指针后`bfs`
+# 864. Shortest Path to Get All Keys
+拿着钥匙后就可以走重复的状态，因此在`bfs`的过程中记录状态
