--- a/801-900.md
+++ b/801-900.md
@@ -292,3 +292,61 @@ return p == 1 ? 0 : 2;
 构造，因此看是否满足，注意当偶数个数字时一点没有回文素数，可以跳过一些
 # 867. Transpose Matrix
 构造`result[col][row]`，翻转即可
+# 868. Binary Gap
+转换成二进制，第一个元素肯定为`1`，依次找后面`1`的位置
+# 869. Reordered Power of 2
+提取每个元素，对所有排列进行遍历
+
+考虑每个二进制数是什么，然后比较与当前数的构成是否相同即可
+``` java
+public boolean reorderedPowerOf2(int n) {
+    int[] A = count(n);
+    for (int i = 0; i < 31; ++i)
+        if (Arrays.equals(A, count(1 << i)))
+            return true;
+    return false;
+}
+
+public int[] count(int n) {
+    int[] ans = new int[10];
+    while (n > 0) {
+        ans[n % 10]++;
+        n /= 10;
+    }
+    return ans;
+}
+```
+# 870. Advantage Shuffle
+贪心，用刚好大于`b`的元素去比较，若没有大于`b`的则选最小的
+# 871. Minimum Number of Refueling Stops
+贪心，先不加油，等到无法满足的时候加之前的最大的油，若还不能到达此点，继续取第二大的加
+
+考虑`dp`的思路，`dp[i][j]`表示经过`i`站进行了`j`次加油可以到达的最远距离
+``` java
+int[][] dp = new int[n + 1][n + 1];
+if (startFuel >= target)
+    return 0;
+for (int i = 0; i < n; i++)
+    dp[i][0] = startFuel;
+
+for (int i = 1; i <= n; i++) {
+    int currPos = stations[i - 1][0];
+    int currGas = stations[i - 1][1];
+    for (int j = 1; j <= i; j++) {
+        // 前i-1站加j次，本站不加油
+        if (dp[i - 1][j] >= currPos) {
+            dp[i][j] = dp[i - 1][j];
+        }
+        // max(前i-1站加j次，本站不加油, 前i-1站加j-1次，本站加油)
+        if (dp[i - 1][j - 1] >= currPos) {
+            dp[i][j] = Math.max(dp[i][j], dp[i - 1][j - 1] + currGas);
+        }
+    }
+}
+
+// 此时走完了n站，看看最少加油几次能达到target
+for (int result = 0; result <= n; result++)
+    if (dp[n][result] >= target)
+        return result;
+return -1;
+```
