--- a/801-900.md
+++ b/801-900.md
@@ -350,3 +350,25 @@ for (int result = 0; result <= n; result++)
         return result;
 return -1;
 ```
+# 872. Leaf-Similar Trees
+把叶子节点取出来后比较`list1.equals(list2)`
+# 873. Length of Longest Fibonacci Subsequence
+遍历任意两个元素，考虑第三个元素是否在`set`中
+
+考虑`dp`，`dp[j][i]=Math.max(2,dp[k][j]+1)`
+``` java
+for (int i = 0; i < len; ++i)
+    map.put(a[i], i);
+int result = 0;
+for (int i = 0; i < len; ++i)
+    for (int j = 0; j < i; ++j) {
+        dp[j][i] = 2;
+        int k = map.getOrDefault(a[i] - a[j], -1);
+        if (k >= 0 && k < j) {
+            dp[j][i] = dp[k][j] + 1
+        }
+        result = Math.max(result, dp[j][i]);
+    }
+```
+# 874. Walking Robot Simulation
+一步一步模拟
