--- a/801-900.md
+++ b/801-900.md
@@ -372,3 +372,24 @@ for (int i = 0; i < len; ++i)
 ```
 # 874. Walking Robot Simulation
 一步一步模拟
+# 875. Koko Eating Bananas
+对可能的值进行二分，取满足的最左边的值
+# 876. Middle of the Linked List
+快慢指针，一个走两步，一个走一步
+# 877. Stone Game
+先手必赢，先手肯定能完全拿到奇数部分或者偶数部分，拿其中大的部分即可
+
+`min-max`，返回相对的分数，看是否大于`0`，加入记忆化可以优化
+> 改造成`dp`可以按长度进行递推
+``` java
+int helper(int[] piles, int l, int r) {
+    if (l == r) {
+        return piles[l];
+    }
+    return Math.max(piles[l] - helper(piles, l + 1, r), piles[r] - helper(piles, l, r - 1));
+}
+```
+# 878. Nth Magical Number
+按最小公倍数划成段，求出在第几段第几个位置，依次求下一个位置
+
+考虑二分，`result`的位置是`result/a + result/b - result/lcm(a,b)`
