--- a/801-900.md
+++ b/801-900.md
@@ -393,3 +393,50 @@ int helper(int[] piles, int l, int r) {
 按最小公倍数划成段，求出在第几段第几个位置，依次求下一个位置
 
 考虑二分，`result`的位置是`result/a + result/b - result/lcm(a,b)`
+# 879. Profitable Schemes
+使用记忆化递归，考虑选和不选两种情况
+> 在遍历到终点的时候才返回`1`
+
+二维的背包`dp`，`dp[i][j][k] = dp[i - 1][j][k] + dp[i - 1][j - g][max(k - p, 0)]`，
+``` java
+for (int i = 1; i <= N; ++i) {
+    int g = group[i - 1];
+    int p = profit[i - 1];
+    for (int j = 1; j <= G; ++j) {
+        for (int k = 0; k <= P; ++k) {
+            dp[i][j][k] = dp[i - 1][j][k];
+            if (j >= g) {
+                dp[i][j][k] += dp[i - 1][j - g][max(k - p, 0)];
+            }
+            dp[i][j][k] %= M;
+        }
+    }
+}
+```
+# 880. Decoded String at Index
+找到大于`k`的位置向后推，推的时候遇到数字则是有个循环块，将`k`取余处理
+
+也可以递归的思路，碰到大于`k`的位置，将`k`取余后从前面重新推
+``` java
+count = 0;
+lastCount = 0;
+for(i = 0; i < S.length(); i++){
+    if(S.charAt(i) >= '0' && S.charAt(i) <= '9'){
+        count *= S.charAt(i) - '0';
+        if(count >= K)
+            return decodeAtIndex(S, (K - 1) % lastCount + 1); 
+    }else{
+        count++;
+        lastCount = count;
+        if(count == K)
+            return "" + S.charAt(i);
+    }
+}
+```
+# 881. Boats to Save People
+贪心的思路，最大和最小的看能不能坐，不能就让最大的单独坐，可以就两个一起
+# 882. Reachable Nodes In Subdivided Graph
+把中间的节点看成需要消耗的`hp`，从`0`开始`Dijkstra`后面的节点，取`hp`最大的来进行遍历，最终合并的时候考虑两个点`hp`和与当前边的最小值
+
+也可以把中间节点看成权值，记录每个点到0的距离，最终合并的时候取每条边两个点`m-d`的和与当前边的最小值
+> `Math.min(w,Math.max(m-d[i],0) + Math.max(m-d[j],0))`
