--- a/801-900.md
+++ b/801-900.md
@@ -440,3 +440,11 @@ for(i = 0; i < S.length(); i++){
 
 也可以把中间节点看成权值，记录每个点到0的距离，最终合并的时候取每条边两个点`m-d`的和与当前边的最小值
 > `Math.min(w,Math.max(m-d[i],0) + Math.max(m-d[j],0))`
+# 883. Projection Area of 3D Shapes
+求每行每列的最大值
+# 884. Uncommon Words from Two Sentences
+分割后`map`计数
+# 885. Spiral Matrix III
+模拟一步一步走，判断是否走到外面了
+# 886. Possible Bipartition
+构造图后染色
