--- a/801-900.md
+++ b/801-900.md
@@ -448,3 +448,15 @@ for(i = 0; i < S.length(); i++){
 模拟一步一步走，判断是否走到外面了
 # 886. Possible Bipartition
 构造图后染色
+# 887. Super Egg Drop
+两种`dp`思路，
+* `dp[k][n]`表示`k`个鸡蛋n层楼需要移动的次数：`dp[k][n]=min(max(dp[k-1][i-1],dp[k][n-i])) 1<=i<=n`
+> 在对`i`进行遍历的时候，由于其单调性，可以采用二分的方法
+* `dp[k][m]`表示移动`m`次能到达的最大高度，当此高度为`n`，则`m`即为所求：`dp[k][m] = dp[k][m - 1] + dp[k - 1][m - 1] + 1`
+> 总的楼层数 = 楼上的楼层数 + 楼下的楼层数 + 1（当前这层楼）
+# 888. Fair Candy Swap
+找到两个和的差值，要交换的元素即为某个值+差值/2
+
+可以不排序，直接全部相加，然后把一个集合放入`set`中查找
+# 889. Construct Binary Tree from Preorder and Postorder Traversal
+找根节点的位置构造左右子树
