--- a/801-900.md
+++ b/801-900.md
@@ -460,3 +460,9 @@ for(i = 0; i < S.length(); i++){
 可以不排序，直接全部相加，然后把一个集合放入`set`中查找
 # 889. Construct Binary Tree from Preorder and Postorder Traversal
 找根节点的位置构造左右子树
+# 890. Find and Replace Pattern
+双映射表
+# 891. Sum of Subsequence Widths
+考虑某个位置分别作为最小值或最大值时有多少种情况，最小值将结果减去，最大值加到结果
+# 892. Surface Area of 3D Shapes
+遍历每一个元素，考虑该元素与四周的关系
