--- a/801-900.md
+++ b/801-900.md
@@ -466,3 +466,13 @@ for(i = 0; i < S.length(); i++){
 考虑某个位置分别作为最小值或最大值时有多少种情况，最小值将结果减去，最大值加到结果
 # 892. Surface Area of 3D Shapes
 遍历每一个元素，考虑该元素与四周的关系
+# 893. Groups of Special-Equivalent Strings
+将每个元素依次与后面的奇偶次数比较，若相同则是同一类，可以不再访问
+
+考虑将每个单词编码，用次数来统计，并区分奇偶，把其放入`set`中
+``` java
+int[] count = new int[52];
+for (int i = 0; i < s.length(); ++i)
+    count[s.charAt(i) - 'a' + 26 * (i % 2)]++;
+set.add(Arrays.toString(count));
+```
