--- a/801-900.md
+++ b/801-900.md
@@ -476,3 +476,11 @@ for (int i = 0; i < s.length(); ++i)
     count[s.charAt(i) - 'a' + 26 * (i % 2)]++;
 set.add(Arrays.toString(count));
 ```
+# 894. All Possible Full Binary Trees
+按左边的个数，分别求左右两边的情况，然后合起来
+# 895. Maximum Frequency Stack
+保存每个元素的频率，并对每个频率保存一个栈，记录最大的频率
+# 896. Monotonic Array
+遍历两次，分别判断是否满足
+
+可以遍历一次，检查是否出现上升或下降的情况
