--- a/801-900.md
+++ b/801-900.md
@@ -484,3 +484,37 @@ set.add(Arrays.toString(count));
 遍历两次，分别判断是否满足
 
 可以遍历一次，检查是否出现上升或下降的情况
+# 897. Increasing Order Search Tree
+遍历一遍，构造新树
+
+可以在中序遍历的时候直接构造
+``` java
+public void dfs(TreeNode node) {
+    if (node == null) return;
+    dfs(node.left);
+    node.left = null;
+    cur.right = node;
+    cur = node;
+    dfs(node.right);
+}
+```
+# 898. Bitwise ORs of Subarrays
+把以`i`位置结尾的结果保存起来，对`i+1`，将里面所有的元素与当前元素或一下，存入`set`结果
+> 以某个位置结尾的结果不会超过`32`个元素
+# 899. Orderly Queue
+当`k`大于`1`的时候，首元素可以转到任意位置，因此排序后返回，`k`为`1`则考虑以每个最小元素开头的结果
+# 900. RLE Iterator
+存储每个数字的次数，用`i`，`j`表示当前到第几行第几列的位置
+
+可以直接在原数组上求值
+``` java
+while (index < a.length) {
+    if (a[index] >= n) {
+        a[index] -= n;
+        return a[index + 1];
+    } else {
+        n -= a[index];
+        index += 2;
+    }
+}
+```
