--- a/801-900.md
+++ b/801-900.md
@@ -289,7 +289,7 @@ return p == 1 ? 0 : 2;
 # 865. Smallest Subtree with all the Deepest Nodes
 记录左右两边返回上来的深度和节点，对比两边的结果进行返回
 # 866. Prime Palindrome
-构造，因此看是否满足，注意当偶数个数字时一点没有回文素数，可以跳过一些
+构造，依次看是否满足，注意当偶数个数字时一点没有回文素数，可以跳过一些
 # 867. Transpose Matrix
 构造`result[col][row]`，翻转即可
 # 868. Binary Gap
