--- a/901-1000.md
+++ b/901-1000.md
@@ -5,3 +5,21 @@
 * 长度相等时，第一位小于`n`的第一位，则后面随便取，等于的时候递归处理
 
 可以套用数位`dp`模板
+# 903. Valid Permutations for DI Sequence
+`dp[i][j]`表示`i`位置放`j`的个数，只需考虑前一位的情况
+* D: dp[i][j] = dp[i-1][j,j+1,j+2,...,i-1]
+* I: dp[i][j] = dp[i-1][0,1,2,...,j-1]
+
+第`i`为放置与前面重复的时候，将前面的所有大于`i`的都加`1`变化
+
+如`DI`现在是`1 0 2`，当再接一个`D`
+* 如果放`2`，则将`1 0 2`变为`1 0 3`
+* 如果放`1`，则将`1 0 2`变为`2 0 3`
+* 如果放`0`，则将`1 0 2`变为`2 1 3`
+# 904. Fruit Into Baskets
+滑动窗口，窗口内最多两个元素
+# 905. Sort Array By Parity
+双指针，向中间靠拢，交换元素
+# 906. Super Palindromes
+从`1`开始，将该数字转为奇和偶回文，平方后判断是否在要求区间
+> 1e18 -> 1e9f->1e5
