--- a/901-1000.md
+++ b/901-1000.md
@@ -23,3 +23,15 @@
 # 906. Super Palindromes
 从`1`开始，将该数字转为奇和偶回文，平方后判断是否在要求区间
 > 1e18 -> 1e9f->1e5
+# 907. Sum of Subarray Minimums
+通过单调栈找某个位置左右能延伸的开区间
+# 908. Smallest Range I
+考虑最大值和最小值即可
+# 909. Snakes and Ladders
+`bfs`最短路
+# 910. Smallest Range II
+排序后遍历，前面的数加`k`，后面的数减`k`，考虑变化的这几个端点的情况
+# 911. Online Election
+记录每个时刻的候选者，然后查找
+# 912. Sort an Array
+直接排序
