--- a/901-1000.md
+++ b/901-1000.md
@@ -35,3 +35,9 @@
 记录每个时刻的候选者，然后查找
 # 912. Sort an Array
 直接排序
+# 913. Cat and Mouse
+`dfs`走每一步，平局的时候是`step`走到`2*len`的情况（正确性未知）
+
+另外一种思路是从每种确定状态倒推染色，最后看初始位置的状态
+# 914. X of a Kind in a Deck of Cards
+求两两的最大公约数是否大于`2`
