--- a/901-1000.md
+++ b/901-1000.md
@@ -41,3 +41,7 @@
 另外一种思路是从每种确定状态倒推染色，最后看初始位置的状态
 # 914. X of a Kind in a Deck of Cards
 求两两的最大公约数是否大于`2`
+# 915. Partition Array into Disjoint Intervals
+遍历求某个点左边最大值和右边最小值，再次遍历当最大值小于等于最小值即可
+# 916. Word Subsets
+统计`b`中每个单词出现的最大次数，看`a`是否满足
